[metadata]
name = audonnx
author = Johannes Wagner, Hagen Wierstorf
author_email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audonnx/
project_urls =
    Documentation = https://audeering.github.io/audonnx/
description = Deploy models in ONNX format
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = mlops, machine learning, ONNX
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audobject >=0.7.1
    onnx
    onnxruntime >=1.8.0
setup_requires =
    setuptools_scm != 7.0.0  # https://github.com/pypa/setuptools_scm/issues/718

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audonnx
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
