[metadata]
name = audonnx
author = Johannes Wagner, Hagen Wierstorf
author_email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audonnx/
project_urls =
    Documentation = https://audeering.github.io/audonnx/
description = Deploy models in ONNX format
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = mlops, machine learning, ONNX
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audobject >=0.7.2
    onnx
    onnxruntime >=1.8.0
setup_requires =
    setuptools_scm != 7.0.0  # https://github.com/pypa/setuptools_scm/issues/718

[tool:pytest]
addopts =
    --doctest-plus
    --cov=audonnx
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
